syntax = "proto3";

package io.shopping.cart.entity;

import "akkaserverless/annotations.proto";
import "google/protobuf/timestamp.proto";

option java_outer_classname = "PurchasedProductEntity";

option (akkaserverless.file).value_entity = {
  name: "PurchasedProduct"
  entity_type: "purchased_product"
  state: "PurchasedProductState"
};

message PurchasedProductState {
  string customer_id = 1;
  string cart_id = 2;
  string product_id = 3;
  string product_name = 4;
  int32 quantity = 5;
  google.protobuf.Timestamp purchased_utc = 6;
}